--- a/style.css
+++ b/style.css
@@ -1,11 +1,11 @@
 /* VARIABLES */
 :root {
---red: #FF6F61;
---blue: #118AB2;
---beige: #f1efe6;
---charcoal: #333;
---green: #28a745;
---dk-green: #218838;
+  --red: #FF6F61;
+  --blue: #118AB2;
+  --beige: #f1efe6;
+  --charcoal: #333;
+  --green: #28a745;
+  --dk-green: #218838;
 }
 
 /* GENERAL */
@@ -93,7 +93,7 @@ nav button.active-nav {
 nav button:not(.active-nav):hover {
   background-color: rgba(255, 255, 255, 0.1);
   color: white;
-} 
+}
 
 /* MAIN */
 main {
@@ -132,7 +132,8 @@ h3 {
 }
 
 /* MERCHANT + ITEM CARDS */
-.merchant, .item {
+.merchant,
+.item {
   align-items: center;
   background-color: #fff;
   border-radius: 8px;
@@ -165,7 +166,7 @@ h3 {
 .item p,
 .item h2 {
   margin: 5px;
-} 
+}
 
 .merchant-options {
   display: flex;
