style: Add html class and styling for coupons page

--- a/style.css
+++ b/style.css
@@ -42,6 +42,13 @@ input {
   width: 200px;
 }
 
+code {
+  color: crimson;
+  background-color: #f1f1f1;
+  padding: 2px;
+  font-size: 105%;
+}
+
 /* ASIDE */
 aside {
   align-items: flex-end;
@@ -133,7 +140,8 @@ h3 {
 
 /* MERCHANT + ITEM CARDS */
 .merchant,
-.item {
+.item,
+.coupon {
   align-items: center;
   background-color: #fff;
   border-radius: 8px;
@@ -146,25 +154,30 @@ h3 {
 }
 
 .merchant:hover,
-.item:hover {
+.item:hover,
+.coupon:hover {
   box-shadow: 0 8px 16px rgba(0, 0, 0, 0.15);
   transform: translateY(-5px);
 }
 
-.items-view {
+.items-view,
+.coupons-view {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
 }
 
-.item {
+.item,
+.coupon {
   flex-direction: column;
   text-align: center;
   width: 30%;
 }
 
 .item p,
-.item h2 {
+.item h2,
+.coupon p,
+.coupon h2 {
   margin: 5px;
 }
 
